fixed content behind header issue

--- a/application/static/scss/_bookable.scss
+++ b/application/static/scss/_bookable.scss
@@ -4,7 +4,7 @@
 	@include gradient($contentGradientFrom, $contentGradientTo);
 	width: 100% - $contentMargin;
 	margin-left: $contentMargin;
-	margin-top: 5em;
+	margin-bottom: 1em;
 	.bookables {
 		.bookable {
 			h3, h4, .bookable-description{
