--- a/application/static/scss/_content.scss
+++ b/application/static/scss/_content.scss
@@ -5,7 +5,6 @@
 	width: 50% - $contentMargin;
 	margin-left: $contentMargin;
 	float: left;
-	margin-top: 1em;
 	margin-bottom: 1em;
 
 	.admin-controls{
